--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         <div class="container">
             <h2 class="section-title fade-in">Get In Touch</h2>
             <div class="contact-form fade-in">
-                <form id="contactForm" action="https://formspree.io/f/mnndonbg", method="POST">
+                <form id="contactForm" action="https://formspree.io/f/mnndonbg" method="POST">
                     <div class="form-group">
                         <input type="text" class="form-control" name="name" placeholder="Your Name" required>
                     </div>
