--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <a href="#skills">Skills</a>
                     <a href="#projects">Projects</a>
                     <a href="#experience">Experience</a>
+                    <a href="#certifications">Certificate</a>
                     <a href="#contact">Contact</a>
                 </div>
                 <div class="hamburger">
@@ -55,7 +56,7 @@
         <div class="container">
             <div class="hero-content fade-in">
                 <h1>Data Analyst & Insights Specialist</h1>
-                <p>Transforming data into meaningful insights and actionable strategies</p>
+                <p>Driven by curiosity. Focused on insights. Powered by data.</p>
                 <div class="btn-group">
                   <a href="#contact" class="btn">Get In Touch</a>
                   <a href="rudra-rokaya-resume.pdf" class="btn" download>Download Resume</a>
@@ -70,6 +71,7 @@
         </div>
     </section>
 
+
     <!-- About Section -->
     <section class="section" id="about">
         <div class="container">
@@ -79,12 +81,9 @@
                     <img src="rudra_rokaya.png" alt="Your Profile" class="profile-pic">
                 </div>
                 <div class="about-text fade-in">
-                  <p><span id="typed-intro" class="typewriter"></span>With 3 years of mobile development experience and a Master's in Data Science (Business Analytics), I specialize
-                    in turning raw data into actionable solutions that drive meaningful business outcomes. </p>
-                  <p>My toolkit includes Python, R, SQL, Java, Power BI, Tableau, and Excel - enabling me to build everything from insightful 
-                    dashboards to full-fledged applicants. I'm also Google-certified in Data Analytics, bringing a well-rounded and practical approach to every challenge. </p>
-                  <p>I thrive at the intersection of development and analytics, where I leverage both code and curiosity to solve real-world problems and deliver measurable impact.</p>
-                    <div class="skills" id="skills">
+                  <p><span id="typed-intro" class="typewriter"></span>a curious and adaptable data analyst with a background in software engineering.</p>
+                  <p>I have 3 years mobile development experience and a Master's in Data Science (Business Analytics). I enjoy exploring new ideas, asking better questions, and turning raw data into real-world impact. Always learning, always improving.</p>
+                    <!-- <div class="skills" id="skills">
                         <h3>Technical Skills</h3>
                         <div class="skills-list">
                             <span class="skill-tag delay-1"><b>SQL</b></span>
@@ -103,14 +102,14 @@
                             <span class="skill-tag"><b>Google BigQuery</b></span>
                             <span class="skill-tag"><b>Azure Database</b></span>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Data Visualization Section -->
-    <section class="section" id="data-visualization">
+    <section class="section" id="skills">
         <div class="container">
             <h2 class="section-title fade-in">My Skills</h2>
             <div class="data-visual fade-in">
@@ -199,22 +198,18 @@
                   <h3>Assistant in Nursing</h3>
                   <h4><a href="https://www.linkedin.com/company/st-vincents-care-services" target="_blank">St. Vincent's Care Services</a>, Toowoomba, QLD</h4>
                   <ul>
-                    <li>Delivered compassionate, and person-centred care while monitoring resident's health status and documenting dialy observations.</li>
-                    <li>Enhanced clinical reporting and communications through accurate health data recording.</li>
-                    <li>Gained first-hand insight into operation workflows and client needs in aged care.</li>
-                    <li> <b>Certification CHCAGE011 Provide support to people living with dementia.</b></li>
-                    <li><b>Certificate III in Individual Support (Aged Care and Disability)</b></li>
+                    <li>Provided person-centred care and monitored resident health with accurate daily reporting.</li>
+                    <li>Maintained quality health records used in clinical decisions and audits.</li>
+                    <li>Built a strong understanding of aged care workflows, data handling, and care coordination.</li>
                   </ul>
+                  <p><b>Certifications:</b> CHCAGE011 – Dementia Support | Certificate III in Individual Support</p>
                   <h5>Relevant Skills</h5>
                   <div class="skills-list">
-                    <span class="skill-tag">Communication </span>
-                    <span class="skill-tag">Collaboration</span>
-                    <span class="skill-tag">Problem-solving </span>
-                    <span class="skill-tag">Time Management</span>
-                    <span class="skill-tag">Crisis Management</span>
-                    <span class="skill-tag">Critical Thinking </span>
-                    <span class="skill-tag">Integrity & Accountability</span>
-                    <span class="skill-tag">Confidentiality </span>
+                    <span class="skill-tag">Communication & Collaboration</span>
+                    <span class="skill-tag">Time & Crisis Management</span>
+                    <span class="skill-tag">Confidentiality & Accountability</span>
+                    <span class="skill-tag">Problem-Solving & Critical Thinking</span>
+                    <span class="skill-tag">Integrity & Ethics</span>
                     <span class="skill-tag">Cultural Awareness & Inclusivity</span>
                   </div>
                 </div>
@@ -227,24 +222,24 @@
                   <h3>Mid-level Android Developer</h3>
                   <h4><a href="https://www.linkedin.com/company/prologicnpl" target="_blank">Prologic Solutions</a>, Kathmandu, Nepal</h4>
                   <ul>
-                    <li>Developed and maintained 10+ Android apps using <b>Java, Kotlin,</b> and <b>MVVM/MVP</b> architecutre.</li>
-                    <li>Built scalable feature with <b>Jetpack components</b> (LiveData, ViewModel, Room, Navigation).</li>
-                    <li>Integrated <b>RESTful APIs</b> using <b>Retrofit</b>, handled <b>JSON parsing</b>, and implemented local storage with <b>Room DB</b>.</li>
-                    <li>Managed app releases to the <b>Google Play Store</b>, including versioning and crash monitoring.</li>
-                    <li>Collaboration in <b>Agile</b> teams using <b>Git, JIRA,</b> and conducted code reviews via pull requests.</li>
-                    <li>Optimized app performance, ensured clean architecutre, and maintained modular codebase.</li>
+                      <li>Developed and maintained 10+ Android apps using Java, Kotlin, and MVVM/MVP architecture.</li>
+                      <li>Built scalable features with Jetpack components like LiveData, ViewModel, Room, and Navigation.</li>
+                      <li>Integrated RESTful APIs via Retrofit, managed JSON parsing, and local storage with Room DB.</li>
+                      <li>Led Play Store app releases with version control, crash monitoring, and performance tuning.</li>
+                      <li>Collaborated in Agile teams using Git, GitHub, and JIRA, with regular pull request reviews.</li>
+                      <br>
                   </ul>
                   <h5> Tools & Technologies</h5>
                   <div class="skills-list">
-                    <span class="skill-tag">Android Studio & Anroid Framework</span>
-                    <span class="skill-tag">Java, Kotlin, REST APIs</span>
-                    <span class="skill-tag">JIRA</span>
-                    <span class="skill-tag">Git, Github</span>
-                    <span class="skill-tag">Android SDK</span>
-                    <span class="skill-tag">Dagger </span>
-                    <span class="skill-tag">LiveData, ViewModel, Room DB</span>
-                    <span class="skill-tag">Retrofit, Glide</span>
+                    <span class="skill-tag">Android Studio</span>
+                    <span class="skill-tag">Java & Kotlin</span>
+                    <span class="skill-tag">MVVM / MVP</span>
+                    <span class="skill-tag">Jetpack (LiveData, ViewModel, Room)</span>
+                    <span class="skill-tag">Retrofit & Glide</span>
                     <span class="skill-tag">Coroutines</span>
+                    <span class="skill-tag">Dagger</span>
+                    <span class="skill-tag">REST APIs / JSON</span>
+                    <span class="skill-tag">Git, GitHub, JIRA</span>
                   </div>
                 </div>
               </div>
@@ -256,20 +251,21 @@
                   <h3>Final Year Capstone Project</h3>
                   <h4><a href="https://www.linkedin.com/school/university-of-southern-queensland" target="_blank"> University of Southern Queensland</a>, Toowoomba, QLD</h4>
                   <ul>
-                    <li>Applied <b>predictive</b> and <b>prescriptive analytics</b> to analyze healthcare fragmentation and social isolation in rural Queensland.</li>
-                    <li>Conducted <b>data integration</b> from LGA, HSD, and MMM datasets; performed <b>EDA</b> and <b>geospatial mapping.</b></li>
-                    <li>Utilized <b>Python (Pandas, Scikit-learn)</b> and <b>Power BI</b> to identify service gaps and population clusters.</li>
-                    <li>Delivered data-driven <b>policy recommendations</b> for targeted helathcare resource allocation and outreach.</li>
-                  </ul>   
+                    <li>Used predictive and prescriptive analytics to explore healthcare fragmentation and social isolation in rural Queensland.</li>
+                    <li>Integrated data from LGA, HSD, and MMM datasets; conducted EDA and geospatial mapping to uncover patterns.</li>
+                    <li>Applied Python (Pandas, Scikit-learn) and Power BI to identify service gaps and population clusters.</li>
+                    <li>Presented actionable insights and resource allocation strategies to improve rural healthcare access.</li>
+                  </ul> <br>
                   <h5> Tools & Technologies</h5>
                   <div class="skills-list">
+                    <span class="skill-tag">Python (Pandas, Scikit-learn)</span>
                     <span class="skill-tag">Power BI</span>
-                    <span class="skill-tag">Python(Pandas, Scikit-learn, Matplotlib)</span>
                     <span class="skill-tag">Excel</span>
-                    <span class="skill-tag">Regression</span>
-                    <span class="skill-tag">K-means clustering</span>
-                    <span class="skill-tag">Time series forecasting</span>
-                    <span class="skill-tag">Descriptive statistics</span>
+                    <span class="skill-tag">EDA & Geospatial Mapping</span>
+                    <span class="skill-tag">Regression Analysis</span>
+                    <span class="skill-tag">K-Means Clustering</span>
+                    <span class="skill-tag">Time Series Forecasting</span>
+                    <span class="skill-tag">Descriptive Statistics</span>
                   </div>                 
                 </div>
               </div>
@@ -281,17 +277,18 @@
                   <h3>Data Analytics Intern</h3>
                   <h4>TGM Capital – Virtual UniSQ Industry Project</h4>
                   <ul>
-                    <li>Built a <b>financial analytics dashboard</b> in <b>Power BI</b> integrating data via custom <b>ETL pipelines</b> using <b>Python (Pandas, SQLAlchemy)</b> and <b>Azure SQL Database</b>.</li>
-                    <li>Performed <b>data cleansing, transformation,</b> and <b>data modeling</b> with star schema design.</li>
-                    <li>Conducted <b>predictive analysis</b> on market behavior using <b>RBA event impact data</b> and applied <b>time series forecasting</b> techniques in R.</li>
-                    <li>Automated data refresh using <b>Power Query</b> and <b>scheduled Azure Data Factory pipelines</b>.</li>
-                    <li>Delivered actionable insights to inform investment decisions and macroeconomic risk assessments.</li>
-                  </ul>
+                    <li>Developed a financial analytics dashboard in Power BI by integrating datasets through custom ETL pipelines using Python (Pandas, SQLAlchemy) and Azure SQL Database.</li>
+                    <li>Performed data cleansing, transformation, and modeling using a star schema approach.</li>
+                    <li>Analyzed RBA event impact and applied time series forecasting in R to predict market behavior.</li>
+                    <li>Delivered insights to support investment strategy and macroeconomic risk assessment.</li>
+                  </ul><br>
                   <h5> Tools & Technologies</h5>
                   <div class="skills-list">
                     <span class="skill-tag">Power BI</span>
                     <span class="skill-tag">Python(Pandas, Scikit-learn)</span>
                     <span class="skill-tag">Excel</span>
+                    <span class="skill-tag">Power Query</span>
+                    <span class="skill-tag">Time Series Analysis</span>
                   </div>   
                 </div>
               </div>
@@ -308,11 +305,11 @@
                     <span class="skill-tag">Applied Analytics</span>
                     <span class="skill-tag">Machine Learning</span>
                     <span class="skill-tag">Big Data Visualization</span>
-                    <span class="skill-tag">Cloud Security</span>
                     <span class="skill-tag">Business Intelligence</span>
+                    <span class="skill-tag">Cloud Security</span>
                     <span class="skill-tag">Statistics for Quant Research</span>
-                    <span class="skill-tag">Multvrt Analysis High-Dim Data</span>
-                    <span class="skill-tag">IS/ICT Project Management</span>
+                    <span class="skill-tag">Multivariate Analysis</span>
+                    <span class="skill-tag">ICT Project Management</span>
                   </div>
                 </div>
               </div>
@@ -322,21 +319,51 @@
                 <div class="timeline-content">
                   <span class="timeline-date">Graduated Jul 2021</span>
                   <h3>Bachelor of Computer Science (Hons.) <span class="gpa">(GPA: 3.03 / 4.00)</span></h3>
-                  <h4>Sunway International Business School (IUKL Affiliated), Kathmandu</h4>
-                  <h5>Relevant Courses</h1>
+                  <h4> <a href="https://www.linkedin.com/school/sunwaycollegektm" target="_blank"> Sunway International Business School (IUKL Affiliated)</a>, Kathmandu, Nepal</h4>
+                  <h5>Relevant Courses</h5>
                   <div class="skills-list">
                     <span class="skill-tag">Internet Programming</span>
-                    <span class="skill-tag">Open Source Development</span>
-                    <span class="skill-tag">Data Communication & Networking</span>
-                    <span class="skill-tag">Data Structure & Algorithm</span>
-                    <span class="skill-tag">Object Oriented Programming</span>
-                    <span class="skill-tag">Artificial Intelligence</span>
                     <span class="skill-tag">Mobile Programming</span>
+                    <span class="skill-tag">Open Source Development</span>
+                    <span class="skill-tag">Object-Oriented Programming</span>
+                    <span class="skill-tag">Data Structures & Algorithms</span>
+                    <span class="skill-tag">Artificial Intelligence</span>
+                    <span class="skill-tag">Data Communication & Networking</span>
                   </div>
                 </div>
               </div>
             </div>
         </div>
+    </section>
+
+    <!-- Certifications Section -->
+    <section class="section" id="certifications">
+      <div class="container">
+        <h2 class="section-title fade-in">Awards & Certificate</h2>
+        <div class="cert-images fade-in">
+          <figure class="cert-item fade-in in-progress">
+            <div class="cert-placeholder">
+              Google Data Analytics Professional Certificate
+            </div>
+            <div class="progress-bar">
+              <div class="progress" style="width: 75%;"></div>
+            </div>
+            <figcaption>
+              Google Data Analytics Professional Certificate
+              <span class="badge"> In progres </span>
+           </figcaption>
+          </figure>
+
+          <figure class="cert-item fade-in">
+            <a href="ss.png" target="_blank" rel="noopener noreferrer">
+              <img src="ss.png" alt="Google Data Analytics Professional Certificate">
+            </a>
+            <figcaption>Provide support to people living with dementia</figcaption>
+          </figure>
+
+         
+        </div>
+      </div>
     </section>
 
     <!-- Contact Section -->
