resume updated to minimalsit design

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p>Driven by curiosity. Focused on insights. Powered by data.</p>
         <div class="btn-group">
           <a href="#contact" class="btn">Get In Touch</a>
-          <a href="pdf files/rudra-rokaya-resume.pdf" class="btn" download>Download Resume</a>
+          <a href="pdf files/rudra rokaya resume.pdf" class="btn" download>Download Resume</a>
         </div>
         <div class="social-links" aria-label="Social Links">
           <a href="https://www.linkedin.com/in/rudra-rokaya" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
@@ -277,8 +277,8 @@
             </h4>
             <ul>
               <li>Used predictive and prescriptive analytics to explore healthcare fragmentation and social isolation in rural Queensland.</li>
-              <li>Integrated data from LGA, HSD, and MMM datasets; conducted EDA and geospatial mapping to uncover patterns.</li>
-              <li>Applied Python (Pandas, Scikit-learn) and Power BI to identify service gaps and population clusters.</li>
+              <li>Collected and integrated data from 15+ public sources, including LGA, MMM, ABS, RACF, and NDIS datasets, to support geospatial and population health analysis.</li>
+              <li>Applied Python and Power BI to identify service gaps and population clusters.</li>
               <li>Presented actionable insights and resource allocation strategies to improve rural healthcare access.</li>
             </ul>
             <h5>Tools &amp; Technologies</h5>
