designed modified into clean, minimalist and modern. changed about me section mostly.

--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
         <div class="about-text-wrapper fade-in">
           <p>
             <span id="typed-intro" class="typewriter"></span>
-            a curious and adaptable data analyst with a background in software engineering.
+            a Google-certified data analyst with a software engineering background mindset.
           </p>
 
           <div class="about-description">
-            <p>I have <span class="highlight-number">3</span>+ years mobile development experience and a Master's in Data Science (Business Analytics). I enjoy exploring new ideas, asking better questions, and turning raw data into real-world impact.</p>
+            <p>I bring curiosity, clarity, and craft to every dataset I touch.</p>
             <blockquote class="about-quote">
-              <p>Always learning, always improving.</p>
+              <p>Always learning. Always improving.</p>
             </blockquote>
           </div>
 
@@ -444,7 +444,7 @@
               <span class="skill-tag">Python</span>
               <span class="skill-tag">Geospatial Mapping</span>
               <span class="skill-tag">Statistical Analysis</span>
-              <span class="skill-tag">Exel</span>
+              <span class="skill-tag">Excel</span>
               <span class="skill-tag">Power BI</span>
               <span class="skill-tag">Predictive Modeling</span>
             </div>
